# ProMoE

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
assets/: expert_prototypes_k12.json  organ_label.json  pe2_structure_order.json  uptake_atlas.json
configs/: promoe_k12.yaml
promoe/: __init__.py  blocks.py  checkpoint.py  data.py  infer.py  io.py  losses.py  model.py  pe2.py  train.py
scripts/: infer.py  inspect_routing.py  train.py
